--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Decipher Program</title>
+        <title>Encipher Program</title>
         <style>
             .center {
                 text-align: center;
@@ -30,9 +30,9 @@
                 left: 50%;
                 transform: translate(-50%, 20px);
             }
-            #button:hover{
+            #button:hover {
                 color: white;
-                background-color: #ff8f5e
+                background-color: #ff8f5e;
             }
             .down {
                 position: absolute;
@@ -41,10 +41,18 @@
                 left: 50%;
                 transform: translate(-50%, -50%);
             }
-            #output {
-                position: absolute;
-                top: 70%;
+            .down {
+                position: relative;
+                text-align: center;
+                top: 120px;
                 left: 50%;
+                transform: translate(-50%, -50%);
+            }
+            #output {
+                position: relative;
+                top: 90px;
+                left: 50%;
+                text-align: center;
                 transform: translate(-50%, -50%);
                 font-family: monospace;
             }
@@ -56,22 +64,22 @@
                 left: 50%;
                 transform: translate(-50%, 0);
             }
-            
         </style>
     </head>
     <body background="https://i.ytimg.com/vi/p_OX8TPf5Rk/maxresdefault.jpg">
-    <p class="monospace color center outline"><strong>MESSAGE DECRYPTER</strong></p>
+    <p class="monospace color center outline"><strong>MESSAGE ENCRYPTER</strong></p>
         <div class="center monospace white input-text">
-            <label for="input">Passkey: </label>
-            <input id="input" type="password"> <br> <br>
-        </div> <br>
-        <div class="monospace white center input-text">
-            <label for="secret_message">Message: </label>
-            <input id="secret_message" type="text">
+            <label for="password">Passkey: </label>
+            <input id="password" type="password"> <br> <br>
         </div>
-        <button id="button">Decode Message</button>
-        <p class="monospace white down">Your message: </p>
+        <br>
+        <div class=" monospace white center input-text">
+            <label for="text">Message: </label>
+            <input id="text" type="text">
+        </div>
+        <button id="button">Encode Message</button>
+        <p class="monospace white down">Your message:</p>
         <p id="output"></p>
-        <script src="Decoder.js"></script>
+        <script src="Encoder.js"></script>
     </body>
 </html>
