--- a/index.html
+++ b/index.html
@@ -81,5 +81,7 @@
         <button id="button">Encode Message</button>
         <p class="monospace white down">Your message:</p>
         <p id="output"></p>
+        <p style = 'text-align: left'>E.Z.</p>
+        <a src='https://www.google.com/'>GOOGLE</a>
     </body>
 </html>
