--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
                 window.open('https://www.google.com/search?safe=strict&rlz=1C5CHFA_enUS814US814&ei=Ex6pW6H_NsGfzwKUn4zYBg&q=google+pacman&oq=google+pacman&gs_l=psy-ab.3..0l2j0i20i263l2j0j0i131j0l4.1307.5890..6052...2.0..1.195.1362.15j1......0....1..gws-wiz.....6..0i71j35i39j0i20i264j0i67j0i131i67j0i131i20i263i264j0i131i20i264j0i10.-Nhis9GPg_s', '_blank');
             }
         </script>
+        <style>
+            h1 {
+                color: white;
+            }
+            body {
+                background-color: black;
+            }
+            h2 {
+                color: white;
+            }
+        </style>
     </head>
     <body>
         <h1>CAP'N CRUNCHES CRAZY CODE</h1>
@@ -14,6 +25,7 @@
         <a href=''  onclick= 'newLink()'>Favorite Website</a>
         <br>
         <a href='encoder.html' title='Encipher Program'>ENCYPHER PROGRAM</a>
+        <a href='pong.html' title='PONG'>PONG LINK</a>
         <h2>E.Z.</h2>
     </body>
 </html>
